# check-

./: ReadME.md
.github/workflows/: Untitled-1.yaml  rust.yml
documents/: private.txt
gachafi_backend_clean/: Cargo.toml
gachafi_backend_clean/src/: lib.rs
gachafi_backend_clean/tests/: lib.rs
gachafy-offline/: .dockerignore  .env  DAPP_METADATA_CONFIGURATION.md  DAPP_VALIDATION_SETUP.md  DATABASE_ALTERNATIVES.md  DEPLOYMENT.md  Dockerfile  INDEPENDENCE.md  LOVABLE_INDEPENDENCE_CHECKLIST.md  RADIX_SETUP.md  README.md  README.production.md  REAL_WALLET_MODE.md  SELF_HOSTING.md  docker-compose.yml  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
gachafy-offline/.github/workflows/: ci.yml
gachafy-offline/public/: manifest.json  sw.js
gachafy-offline/public/.well-known/: radix.json
gachafy-offline/src/: App.tsx  index.css  vite-env.d.ts
gachafy-offline/src/components/: AudioControls.tsx  BridgeModal.tsx  ErrorBoundary.tsx  HeroSection.tsx  NotificationDemo.tsx  RadixConnectButton.tsx  RadixWalletPrompt.tsx
gachafy-offline/src/contexts/: GachaFiContext.tsx
gachafy-offline/src/hooks/: useAudio.ts  useBooster.ts  useOffline.ts  useOfflineQueue.ts  useStreak.ts  useWallet.ts
gachafy-offline/src/lib/: errorHandling.ts  logger.ts  (+4 more)
gachafy-offline/supabase/: config.toml
scrypto-backend/: .txt
scrypto-backend/gachafi_smart_contracts/: .env  Cargo.toml  deploy.rtm  publish.rtm
scrypto-backend/gachafi_smart_contracts/src/: lib.rs
scrypto-backend/gachafi_smart_contracts/tests/: lib.rs
(+6 files in other folders)
