[package]
name = "gachafi_smart_contracts"
version = "1.0.0"
edition = "2021"

[dependencies]
scrypto = { version = "1.3.0" }
base64ct = "=1.7.3"
indexmap = "=1.9.3"

[dev-dependencies]
scrypto-test = { version = "1.3.0" }

[profile.release]
opt-level = "s"           # Optimize for size.
lto = true                # Enable Link Time Optimization.
codegen-units = 1         # Reduce number of codegen units to increase optimizations.
panic = "abort"           # Abort on panic.
strip = true              # Strip the symbols.
overflow-checks = true    # Panic in the case of an overflow.

[profile.release.package."*"]
opt-level = "s"

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
# Set the package crate as its own empty workspace, to hide it from any potential ancestor workspaces
# Remove this [workspace] section if you intend the package to be part of a cargo workspace

